# home_challenge_clone

./: .env-example  .gitignore  README.md  docker-compose.yml
app/: alembic.ini  config.py  example.txt  main.py  pyproject.toml  run_grouping.py
app/db/: base.py  base_model.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: b6fd7be1c588_init.py
app/db/models/: folder.py  group_name.py
app/depends/: base_crud.py  folders.py  group_names.py
app/errors/: __init__.py
app/routes/folders/: __init__.py  api.py
app/routes/names/: __init__.py  api.py
app/schemas/: base.py  folders.py  names.py
app/utils/: grouping.py
dockerfiles/: app.Dockerfile
dockerfiles/nginx/: nginx.conf
