[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["SergeyTverdokhleb <s.hardbread@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.7.5"
asyncpg = "0.24.0"
fastapi = "0.74.1"
SQLAlchemy = "1.4.25"
pydantic = "1.8.2"
uvicorn = "0.17.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
